# artus

./: .gitignore  GEMINI.md  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: build-tauri.yml
scripts/: check-version-sync.mjs  generate-mastery-items.mjs  update-version.mjs
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: warframe_market_statistics.json
src-tauri/src/: dictionary.rs  error.rs  hotkeys.rs  layer_shell.rs  main.rs  market.rs  market_prices.rs  ocr.rs  prices.rs  relic_rewards.rs  settings.rs  setup.rs  state.rs  store_ext.rs  theme_colors.toml  updater.rs  window_watcher.rs
src-tauri/src/lib/types/bindings/: ModType.ts  OcrDebugImagePayload.ts  OcrPayload.ts  OcrPipelineConfig.ts  OcrTextPayload.ts  OcrThemeOption.ts  OcrWord.ts
src-tauri/src/ocr/: capture.rs  dictionary.rs  engine.rs  mod.rs  preprocessing.rs
src/lib/: schemas.ts  settings.svelte.ts  transition.ts  types.ts
src/lib/components/: AlertDialog.svelte  Button.svelte  Collapsible.svelte  Combobox.svelte  Select.svelte  Slider.svelte  Switch.svelte
src/lib/components/dashboard/: SettingsMain.svelte
src/lib/components/ui/: CommonSetting.svelte  data-table.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/select/: select-content.svelte  select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-trigger.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-title.svelte
src/lib/components/ui/sidebar/: sidebar-trigger.svelte  sidebar.svelte
src/lib/data/: masterable-items.json
src/routes/: +layout.svelte  +page.svelte
src/routes/artus/: +page.svelte  ArtusMainPage.svelte  ArtusSidebar.svelte  Header.svelte  MainContent.svelte  Sidebar.svelte  SiteHeader.svelte
src/routes/artus/dashboard/: Main.svelte
src/routes/artus/inventory/: Main.svelte  Tab.svelte
src/routes/artus/market/: Chart.svelte  InfoCard.svelte  Main.svelte  Orders.svelte  Statistics.svelte
src/routes/artus/mastery/: Main.svelte  columns.ts
src/routes/artus/settings/: Main.svelte  MainOld.svelte  settings-api.ts
src/routes/artus/settings/categories/: DebugSettings.svelte  Hotkeys.svelte  MetaInformation.svelte  OverlaySettings.svelte  WarframeSettings.svelte
src/routes/artus/settings/components/: CaptureModsSetting.svelte  DictionaryMappingSetting.svelte  DictionarySettings.svelte  HideOverlayOnFocusLossSetting.svelte  HotkeyCapture.svelte  (+9 more)
src/routes/dashboard/: +page.svelte
src/routes/dashboard/dashboard/: Main.svelte
src/routes/overlay/: +page.svelte
(+3 files in other folders)
