[package]
name = "artus"
version = "0.1.0"
description = "A Tauri App"
authors = ["thaumictom"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk-layer-shell = { version = "0.8.2", optional = true }
gtk = { version = "0.18", optional = true }
cairo-rs = { version = "0.18", optional = true }

tauri-plugin-global-shortcut = "2.3.1"
active-win-pos-rs = "*"
xcap = "*"
image = "*"
imageproc = "0.26.1"
kreuzberg-tesseract = "4.3.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-store = "2"

[features]
default = []
wayland-layer-shell = ["dep:gtk-layer-shell", "dep:gtk", "dep:cairo-rs"]
