[package]
name = "artus"
version = "0.1.12"
description = "A Tauri App"
authors = ["thaumictom"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
gtk-layer-shell = { version = "0.8.2", optional = true }
gtk = { version = "0.18", optional = true }
cairo-rs = { version = "0.18", optional = true }

tauri-plugin-global-shortcut = "2.3.1"
active-win-pos-rs = "*"
xcap = "*"
image = "*"
imageproc = "0.26.1"
kreuzberg-tesseract = "4.3.3"
reqwest = { version = "0.12", default-features = false, features = [
	"blocking",
	"json",
	"rustls-tls",
] }
tauri-plugin-store = "2"
sysinfo = "0.38.4"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "time"] }
tauri-plugin-dialog = "2"

[features]
default = []
wayland-layer-shell = ["dep:gtk-layer-shell", "dep:gtk", "dep:cairo-rs"]

[profile.release]
panic = "abort"   # Disables unwinding (saves size)
codegen-units = 1 # Slower compile, but better optimization
lto = true        # Link-time optimization (removes dead code)
opt-level = "s"   # Optimize for size (use "z" if you want to try even smaller)
strip = true      # Strips symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
